@@ -1,53 +1,35 @@
 package org.soak.map.event.inventory.action.furnance;
 
 import org.bukkit.event.EventPriority;
+import org.bukkit.event.Listener;
 import org.bukkit.event.inventory.FurnaceSmeltEvent;
 import org.bukkit.inventory.CookingRecipe;
+import org.bukkit.plugin.EventExecutor;
+import org.bukkit.plugin.Plugin;
 import org.soak.WrapperManager;
-import org.soak.map.event.EventSingleListenerWrapper;
+import org.soak.map.event.SoakEvent;
 import org.soak.map.item.SoakItemStackMap;
 import org.soak.map.item.SoakRecipeMap;
 import org.soak.plugin.SoakManager;
 import org.soak.wrapper.block.SoakBlock;
-import org.spongepowered.api.event.Listener;
 import org.spongepowered.api.event.Order;
 import org.spongepowered.api.event.block.entity.CookingEvent;
 
-public class SoakSmeltItemEvent {
+import java.util.List;
 
-    private final EventSingleListenerWrapper<FurnaceSmeltEvent> singleEventListener;
+public class SoakSmeltItemEvent extends SoakEvent<CookingEvent.Finish, FurnaceSmeltEvent> {
 
-    public SoakSmeltItemEvent(EventSingleListenerWrapper<FurnaceSmeltEvent> event) {
-        this.singleEventListener = event;
+    public SoakSmeltItemEvent(Class<FurnaceSmeltEvent> bukkitEvent, EventPriority priority, Plugin plugin, Listener listener, EventExecutor executor, boolean ignoreCancelled) {
+        super(bukkitEvent, priority, plugin, listener, executor, ignoreCancelled);
     }
 
-    @Listener(order = Order.FIRST)
-    public void firstEvent(CookingEvent.Finish spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.HIGHEST);
+    @Override
+    protected Class<CookingEvent.Finish> spongeEventClass() {
+        return CookingEvent.Finish.class;
     }
 
-    @Listener(order = Order.EARLY)
-    public void earlyEvent(CookingEvent.Finish spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.HIGH);
-    }
-
-    @Listener(order = Order.DEFAULT)
-    public void normalEvent(CookingEvent.Finish spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.NORMAL);
-    }
-
-    @Listener(order = Order.LATE)
-    public void lateEvent(CookingEvent.Finish spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.LOW);
-    }
-
-    @Listener(order = Order.LAST)
-    public void lastEvent(CookingEvent.Finish spongeEvent) {
-        fireEvent(spongeEvent, EventPriority.LOWEST);
-    }
-
-
-    private void fireEvent(CookingEvent.Finish event, EventPriority priority) {
+    @Override
+    public void handle(CookingEvent.Finish event) throws Exception {
         var furnace = new SoakBlock(event.blockEntity()
                 .locatableBlock()
                 .location()
@@ -56,22 +38,19 @@ public class SoakSmeltItemEvent {
         var original = event.recipe()
                 .map(cooking -> cooking.ingredient().displayedItems())
                 .filter(items -> items.size() == 1)
-                .map(items -> items.get(0))
-                .map(
-                        SoakItemStackMap::toBukkit)
+                .map(List::getFirst)
+                .map(SoakItemStackMap::toBukkit)
                 .orElseThrow(() -> new RuntimeException("Could not find the before item"));
         var recipe = (CookingRecipe<?>) event.recipe().map(SoakRecipeMap::toBukkit).orElse(null);
-        if (event.cookedItems().size() != 1) {
-            throw new RuntimeException("Furnace cooked " + event.cookedItems().size() + " itemstacks");
+        if (event.transactions().size() != 1) {
+            throw new RuntimeException("Furnace cooked " + event.transactions().size() + " itemstacks");
         }
-        var result = SoakItemStackMap.toBukkit(event.cookedItems().get(0));
+        var result = SoakItemStackMap.toBukkit(event.transactions().getFirst().finalReplacement());
         var bukkitEvent = new FurnaceSmeltEvent(furnace, original, result, recipe);
+        fireEvent(bukkitEvent);
 
-        SoakManager.<WrapperManager>getManager().getServer().getSoakPluginManager().callEvent(this.singleEventListener, bukkitEvent, priority);
-
-        /*if (bukkitEvent.isCancelled()) {
+        if (bukkitEvent.isCancelled()) {
             event.setCancelled(true);
-        }*/
-        //TODO cancel this event .... somehow
+        }
     }
 }
