@@ -1,6 +1,7 @@
 package org.soak.wrapper.entity;
 
 import io.papermc.paper.entity.TeleportFlag;
+import io.papermc.paper.threadedregions.scheduler.EntityScheduler;
 import net.kyori.adventure.audience.Audience;
 import net.kyori.adventure.text.Component;
 import org.bukkit.*;
@@ -16,18 +17,22 @@ import org.bukkit.plugin.Plugin;
 import org.bukkit.util.BoundingBox;
 import org.bukkit.util.Vector;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.mose.collection.stream.builder.CollectionStreamBuilder;
 import org.soak.WrapperManager;
 import org.soak.data.sponge.SoakKeys;
 import org.soak.exception.NotImplementedException;
+import org.soak.generate.bukkit.EntityTypeList;
+import org.soak.generate.bukkit.EntityTypeMappingEntry;
 import org.soak.map.SoakDirectionMap;
+import org.soak.map.SoakEntityMap;
 import org.soak.map.SoakMessageMap;
 import org.soak.map.SoakVectorMap;
 import org.soak.plugin.SoakManager;
+import org.soak.utils.GeneralHelper;
 import org.soak.utils.ListMappingUtils;
 import org.soak.wrapper.command.SoakCommandSender;
 import org.soak.wrapper.entity.living.AbstractLivingEntity;
-import org.soak.wrapper.entity.projectile.SoakFirework;
 import org.soak.wrapper.persistence.SoakMutablePersistentDataContainer;
 import org.soak.wrapper.world.SoakWorld;
 import org.spongepowered.api.Sponge;
@@ -36,9 +41,6 @@ import org.spongepowered.api.block.BlockTypes;
 import org.spongepowered.api.data.Keys;
 import org.spongepowered.api.data.value.Value;
 import org.spongepowered.api.entity.living.Living;
-import org.spongepowered.api.entity.living.player.server.ServerPlayer;
-import org.spongepowered.api.entity.projectile.explosive.FireworkRocket;
-import org.spongepowered.api.entity.weather.LightningBolt;
 import org.spongepowered.api.service.permission.Subject;
 import org.spongepowered.api.util.AABB;
 import org.spongepowered.api.util.Direction;
@@ -48,10 +50,12 @@ import org.spongepowered.api.world.weather.WeatherTypes;
 import org.spongepowered.math.vector.Vector3d;
 
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Supplier;
 
-public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Entity> extends SoakCommandSender implements Entity {
+public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Entity> extends SoakCommandSender
+        implements Entity {
 
     private static final Map<UUID, Map<String, MetadataValue>> METADATA = new ConcurrentHashMap<>();
     protected E entity;
@@ -61,25 +65,24 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
         this.entity = entity;
     }
 
-    public static AbstractEntity<? extends org.spongepowered.api.entity.Entity> wrapEntity(org.spongepowered.api.entity.Entity entity) {
-        if (entity instanceof ServerPlayer) {
-            return SoakManager.<WrapperManager>getManager().getMemoryStore().get((ServerPlayer) entity);
+    @SuppressWarnings("unchecked")
+    private static <SE extends org.spongepowered.api.entity.Entity, SoakEntity extends Entity> SoakEntity wrapEntity(SE entity) {
+        EntityTypeMappingEntry<SE, SoakEntity> entityTypeMapping =
+                (EntityTypeMappingEntry<SE, SoakEntity>) EntityTypeList.getEntityTypeMapping(
+                entity.type());
+        if (!entityTypeMapping.isFinal()) {
+            entityTypeMapping.updateWithSoakClass((Class<SE>) entity.getClass());
         }
-        if (entity instanceof FireworkRocket) {
-            return new SoakFirework(Sponge.systemSubject(), Sponge.systemSubject(), (FireworkRocket) entity);
-        }
-        if (entity instanceof LightningBolt bolt) {
-            return new SoakLightningStrike(bolt);
-        }
-        return new SoakEntity<>(Sponge.systemSubject(), Sponge.systemSubject(), entity);
+        return entityTypeMapping.createMapping(entity);
     }
 
+    @SuppressWarnings("unchecked")
     public static <E extends Living> AbstractLivingEntity<E> wrap(E living) {
-        return (AbstractLivingEntity<E>) (Object) wrap((org.spongepowered.api.entity.Entity) living);
+        return (AbstractLivingEntity<E>) (Object) wrapEntity(living);
     }
 
-    public static <E extends org.spongepowered.api.entity.Entity> AbstractEntity<E> wrap(E entity) {
-        return (AbstractEntity<E>) wrapEntity(entity);
+    public static <E extends org.spongepowered.api.entity.Entity> AbstractEntity<?> wrap(E entity) {
+        return wrapEntity(entity);
     }
 
     public E spongeEntity() {
@@ -150,9 +153,9 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
     @Override
     public @NotNull Location getLocation() {
         var loc = new Location(this.getWorld(),
-                this.entity.position().x(),
-                this.entity.position().y(),
-                this.entity.position().z());
+                               this.entity.position().x(),
+                               this.entity.position().y(),
+                               this.entity.position().z());
         var spongeRotation = this.entity.rotation();
         loc.setPitch((float) spongeRotation.x());
         loc.setYaw((float) spongeRotation.y());
@@ -166,7 +169,7 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
 
     @Override
     public @NotNull EntityType getType() {
-        return EntityType.fromSponge(this.entity.type());
+        return SoakEntityMap.toBukkit(this.entity.type());
     }
 
     @Override
@@ -205,7 +208,8 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
     }
 
     @Override
-    public boolean teleport(@NotNull Location location, @NotNull PlayerTeleportEvent.TeleportCause teleportCause, @NotNull TeleportFlag... teleportFlags) {
+    public boolean teleport(@NotNull Location location, @NotNull PlayerTeleportEvent.TeleportCause teleportCause,
+                            @NotNull TeleportFlag... teleportFlags) {
         var bukkitWorld = (SoakWorld) location.getWorld();
         var spongeLocation = bukkitWorld.sponge().location(location.getX(), location.getY(), location.getZ());
         var rotation = new Vector3d(location.getPitch(), location.getYaw(), this.entity.rotation().z());
@@ -312,7 +316,10 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
 
     @Override
     public boolean spawnAt(@NotNull Location location, @NotNull CreatureSpawnEvent.SpawnReason spawnReason) {
-        throw NotImplementedException.createByLazy(Entity.class, "spawnAt", Location.class, CreatureSpawnEvent.SpawnReason.class);
+        throw NotImplementedException.createByLazy(Entity.class,
+                                                   "spawnAt",
+                                                   Location.class,
+                                                   CreatureSpawnEvent.SpawnReason.class);
 
     }
 
@@ -390,7 +397,11 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
     public @NotNull List<Entity> getNearbyEntities(double x, double y, double z) {
         var thisLocation = getLocation();
         var near = this.getWorld().getNearbyEntities(thisLocation, x, y, z);
-        return ListMappingUtils.fromStream(CollectionStreamBuilder.builder().collection(near).basicMap(t -> t), near::stream, Object::equals, Comparator.comparingDouble(entity -> entity.getLocation().distanceSquared(thisLocation))).buildList();
+        return ListMappingUtils.fromStream(CollectionStreamBuilder.builder().collection(near).basicMap(t -> t),
+                                           near::stream,
+                                           Object::equals,
+                                           Comparator.comparingDouble(entity -> entity.getLocation()
+                                                   .distanceSquared(thisLocation))).buildList();
     }
 
     @Override
@@ -435,7 +446,7 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
         if (passengers.isEmpty()) {
             return null;
         }
-        return passengers.get(0);
+        return passengers.getFirst();
     }
 
     @Deprecated
@@ -447,8 +458,7 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
     @Override
     public @NotNull List<Entity> getPassengers() {
         List<org.spongepowered.api.entity.Entity> spongeEntities = this.entity.get(Keys.PASSENGERS).orElse(List.of());
-        return CollectionStreamBuilder
-                .builder()
+        return CollectionStreamBuilder.builder()
                 .collection(spongeEntities)
                 .basicMap(spongeEntity -> (Entity) AbstractEntity.wrap(spongeEntity))
                 .withFirstIndexOf(soakEntity -> spongeEntities.indexOf(((AbstractEntity<?>) soakEntity).entity))
@@ -687,5 +697,119 @@ public abstract class AbstractEntity<E extends org.spongepowered.api.entity.Enti
     @Override
     public @NotNull PersistentDataContainer getPersistentDataContainer() {
         return new SoakMutablePersistentDataContainer<>(this.entity);
+    }
+
+    @Override
+    public @NotNull CompletableFuture<Boolean> teleportAsync(@NotNull Location location,
+                                                             @NotNull PlayerTeleportEvent.TeleportCause teleportCause
+            , @NotNull TeleportFlag @NotNull ... teleportFlags) {
+        CompletableFuture<Boolean> future = new CompletableFuture<>();
+        var plugin = GeneralHelper.fromStackTrace();
+
+        Sponge.server().scheduler().executor(plugin).submit(() -> {
+            boolean tel = teleport(location, teleportCause, teleportFlags);
+            future.complete(tel);
+        });
+        return future;
+    }
+
+    @Override
+    public boolean isInvisible() {
+        return false;
+    }
+
+    @Override
+    public void setInvisible(boolean b) {
+
+    }
+
+    @Override
+    public void setNoPhysics(boolean b) {
+
+    }
+
+    @Override
+    public boolean hasNoPhysics() {
+        return false;
+    }
+
+    @Override
+    public @NotNull Set<Player> getTrackedBy() {
+        return Set.of();
+    }
+
+    @Override
+    public void setPose(@NotNull Pose pose, boolean b) {
+
+    }
+
+    @Override
+    public boolean hasFixedPose() {
+        return false;
+    }
+
+    @Override
+    public boolean isInWorld() {
+        return false;
+    }
+
+    @Override
+    public @Nullable String getAsString() {
+        return "";
+    }
+
+    @Override
+    public @Nullable EntitySnapshot createSnapshot() {
+        return null;
+    }
+
+    @Override
+    public org.bukkit.entity.@NotNull Entity copy() {
+        return null;
+    }
+
+    @Override
+    public org.bukkit.entity.@NotNull Entity copy(@NotNull Location location) {
+        return null;
+    }
+
+    @Override
+    public double getX() {
+        return 0;
+    }
+
+    @Override
+    public double getY() {
+        return 0;
+    }
+
+    @Override
+    public double getZ() {
+        return 0;
+    }
+
+    @Override
+    public float getPitch() {
+        return 0;
+    }
+
+    @Override
+    public float getYaw() {
+        return 0;
+    }
+
+    @Override
+    public @NotNull EntityScheduler getScheduler() {
+        return null;
+    }
+
+    @Override
+    public @NotNull String getScoreboardEntryName() {
+        return "";
+    }
+
+    @Override
+    public void broadcastHurtAnimation(@NotNull Collection<Player> collection) {
+
     }
 }
